header and donate-today added

--- a/index.html
+++ b/index.html
@@ -5,9 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Donation Can Change Others &mdash; life </title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <header class="header flex">
+        <div class="header__text-container text-center container">
+           <h1 class="header__heading heading-1">
+                Let's Help Those Who Are
+                More In Need
+            </h1>
+            <p class="header__text text">
+                Grab your hand to the refugee people who have lost their mind to live in the open sky and do humanitarian job.
+            </p>
+            <button class="header__btn btn">Donate Now!</button>
+        </div>
+    </header>
+
+    <main class="main">
+        <section class="donate-today">
+            <div class="donate-today__text-container text-center container">
+                <h2 class="donate-today__heading heading-2">Donate Today!</h2>
+                <p class="donate-today__text text">
+                    Your some donation can change anyone's life and bring a sparkling smirk for a while !
+                </p>
+            <div class="amount">
+                <ul class="amount__list flex">
+                    <li class="amount__item">100tk</li>
+                    <li class="amount__item amount__item--current">200tk</li>
+                    <li class="amount__item">500tk</li>
+                    <li class="amount__item">1000tk</li>
+                    <li class="amount__item">5000tk</li>
+                </ul>
+                <span class="amount__other">Other Amount (Taka)</span>
+                <hr class="amount__horiz-line" />
+                <button class="amount__btn btn">Donate Now!</button>
+            </div>
+        </div>
+        </section>
+    </main>
 </body>
 </html>
