--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div class="donate-today__text-container text-center container">
                 <h2 class="donate-today__heading heading-2">Donate Today!</h2>
                 <p class="donate-today__text text">
-                    Your some donation can change anyone's life and bring a sparkling smirk for a while !
+                    Your some donation can change anyone's life and bring a sparkling smirk for a while ! So feel pity to them.
                 </p>
             <div class="amount">
                 <ul class="amount__list flex">
@@ -44,6 +44,38 @@
                 <button class="amount__btn btn">Donate Now!</button>
             </div>
         </div>
+        </section>
+
+        <section class="donate-plan">
+            <div class="donate-plan__text-container text-center container">
+                <h2 class="donate-plan__heading heading-2">Donate plan!</h2>
+                <p class="donate-plan__text text">
+                    We Are In A Mission To Help The Helpless. You aren't out of them! Check
+                    What We Have Been Serving For Homeless People. 
+                </p>
+            </div>
+            <div class="donate-plan__cards flex">
+                <div class="card card--1">
+                <img src="./icons/food.png" alt="" class="card__img">
+                <h4 class="card__heading">Food for a family</h4>
+                <p class="card__text text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum aspernatur quas distinctio voluptate id! Veniam incidunt quidem minima recusandae ipsa?</p>
+                </div>
+
+                <div class="card card--2">
+                <img src="./icons/shelter.png" alt="" class="card__img">
+                <h4 class="card__heading">Shelter for a family</h4>
+                <p class="card__text text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum aspernatur quas
+                distinctio voluptate id! Veniam incidunt quidem minima recusandae ipsa?</p>
+                </div>
+
+                <div class="card card--3">
+                    <img src="./icons/icon4.svg" alt="" class="card__img">
+                    <h4 class="card__heading">Education for a family</h4>
+                <p class="card__text text">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorum aspernatur quas
+                distinctio voluptate id! Veniam incidunt quidem minima recusandae ipsa?</p>
+                </div>
+
+            </div>
         </section>
     </main>
 </body>
