--- a/index.html
+++ b/index.html
@@ -140,7 +140,16 @@
             </form>
         </section>
 
-      
+        <footer class="footer">
+            <div class="footer__text-container  container text-center">
+            <h2 class="footer__heading heading-2">
+                Be Humble
+            </h2>
+            <span class="footer__inspiration">
+                I'm gonna do it
+            </span>
+            </div>
+        </footer>
     </main>
 </body>
 </html>
