team added  and some background changes

--- a/index.html
+++ b/index.html
@@ -124,7 +124,39 @@
                     <button class="header__btn btn">How to contribute</button>
                 </div>         
         </div>
+        </section>
 
+        <section class="team">
+            <div class="team__text-container container text-center">
+                <h2 class="team__heading heading-2">Meet Our Team</h2>
+                <p class="team__text text">Our expert volunteer</p>
+            </div>
+
+            <div class="volunteer flex volunteer__flex-width">
+                <div class="volunteer__card">
+                    <img src="./images/person-1.jpg" alt="" class="volunteer__img">
+                    <div class="volunteer__info">
+                        <h3 class="volunteer__info-heading heading-3">Julia Jossoy</h3>
+                        <p class="volunteer__position text">CEO & Founder</p>
+                    </div>
+                </div>
+
+                <div class="volunteer__card">
+                    <img src="./images/person-2.jpg" alt="" class="volunteer__img">
+                    <div class="volunteer__info">
+                        <h3 class="volunteer__info-heading heading-3">Robert Honey</h3>
+                        <p class="volunteer__position text">Volunteer</p>
+                    </div>
+                </div>
+
+                <div class="volunteer__card">
+                    <img src="./images/person-3.jpg" alt="" class="volunteer__img">
+                    <div class="volunteer__info">
+                        <h3 class="volunteer__info-heading heading-3">Smith Tomkin</h3>
+                        <p class="volunteer__position text">Volunteer</p>
+                    </div>
+                </div>
+            </div>
         </section>
 
         <section class="newsletter text-center container">
